--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,5 +1,21 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  font-size: 14px;
+  padding: 4px;
+}
+
+h1 {
+  font-weight: 600;
+  font-size: 16px;
+  padding-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-left: 2px solid #409EFF;
 }
