--- a/src/components/Button/index.less
+++ b/src/components/Button/index.less
@@ -1,1 +1,1 @@
-.preview-main{ width: 100%; height: 100%; border-radius: 4px; text-align: center; cursor: pointer;}
+.main{ width: 100%; height: 100%; border-radius: 4px; text-align: center; cursor: pointer;}
