--- a/src/components/Carousel/index.less
+++ b/src/components/Carousel/index.less
@@ -1,4 +1,4 @@
 // preview
-.preview-main{ position: relative; width: 100%; height: 100%; overflow: hidden;}
-.preview-ul{ position: absolute; top: 0; left: 0; padding:0; margin:0;}
+.main{ position: relative; width: 100%; height: 100%; overflow: hidden;}
+.ul{ position: absolute; top: 0; left: 0; padding:0; margin:0;}
 
