--- a/src/components/CustomService/index.less
+++ b/src/components/CustomService/index.less
@@ -16,17 +16,17 @@
 }
 
 // preview
-.preview-main{ display: flex; height: 100%;}
-.preview-btn-box{ 
+.main{ display: flex; height: 100%;}
+.btn-box{ 
   flex: 1; position: relative;
   height: 100%;
   border-radius: 4px; cursor: pointer;
   font-size: 14px; text-align: center;
 }
-.preview-btn{
+.btn{
   position: absolute; left: 50%; top:50%; 
   transform: translate(-50%, -50%);
 }
 
-.preview-tel:before { content: "\e603"; padding-right: 2.5px;}
-.preview-qq:before { content: "\e602"; padding-right: 2.5px; }
+.tel:before { content: "\e603"; padding-right: 2.5px;}
+.qq:before { content: "\e602"; padding-right: 2.5px; }
