--- a/src/components/JiJinCard/index.less
+++ b/src/components/JiJinCard/index.less
@@ -1,10 +1,10 @@
 // preview
-.preview-main{ width: 100%; height: auto; padding: 10px; font-size: 14px; color: #000; }
+.main{ width: 100%; height: auto; padding: 10px; font-size: 14px; color: #000; }
 
-.preview-title{
+.title{
   color: #262626; text-align: center; font-size: 20px;
 }
-.preview-label-list{
+.label-list{
   padding-top: 10px;
   text-align: center;
   span{
@@ -16,16 +16,16 @@
     box-sizing: border-box;
   }
 }
-.preview-yield-rate{ 
+.yield-rate{ 
   padding-top: 28px; 
   color: #F5222D; font-size: 22px; font-weight: bold;
   line-height: 26px; text-align: center; 
 }
-.preview-yield-info{ font-size: 12px; color: #7d7d7d; 
+.yield-info{ font-size: 12px; color: #7d7d7d; 
   text-align: center; line-height: 14px; 
   padding-top: 8px; 
 }
-.preview-btn{
+.btn{
   text-align: center;
   span{ 
     display: inline-block; 
