--- a/src/components/Collapse/index.less
+++ b/src/components/Collapse/index.less
@@ -17,21 +17,21 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.preview-main{ width: 100%; height: auto; }
-.preview-header{
+.main{ width: 100%; height: auto; }
+.header{
   position: relative;
   width: 100%; box-sizing: border-box; padding:  7px 31px 7px 15px;
   font-size: 16px; line-height: 22px; cursor: pointer;
   p{padding:0; margin:0;}
   img{width: 100%;}
 }
-.preview-point{ 
+.point{ 
   position: absolute; right: 15px; top:0;
   transition: transform .3s; line-height: 40px;
 }
-.preview-point:before {content: "\e604";}
+.point:before {content: "\e604";}
 
-.preview-body { 
+.body { 
   width: 100%; box-sizing: border-box; padding: 7px 15px;
   font-size: 14px; line-height: 22px;
   p{padding:0; margin:0;}
