--- a/src/components/Input/index.less
+++ b/src/components/Input/index.less
@@ -1,4 +1,4 @@
 // preivew
-.preview-main{ width: 100%; height: auto; font-size: 14px; }
-.preview-input{ display: block; box-sizing: border-box; padding-left: 16px; width: 100%; outline: none; margin-bottom: 7px; border: 1px solid; }
-.preview-btn{ text-align: center; font-size: 14px; cursor: pointer;}
+.main{ width: 100%; height: auto; font-size: 14px; }
+.input{ display: block; box-sizing: border-box; padding-left: 16px; width: 100%; outline: none; margin-bottom: 7px; border: 1px solid; }
+.btn{ text-align: center; font-size: 14px; cursor: pointer;}
